--- a/frontend/src/pages/Home/components/Hero/Hero.module.scss
+++ b/frontend/src/pages/Home/components/Hero/Hero.module.scss
@@ -129,6 +129,10 @@
   }
 }
 
+.ctaButtonAnchor {
+  display: inline-flex;
+}
+
 .heroRight {
   flex: 1 1 0;
   min-width: 0;
